--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
