Alterações Vendas e mais algumas

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/i
 AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+AutoStockCar/nbactions.xml
+AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
