--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ AutoStockCar/nbactions.xml
 AutoStockCar/nbactions.xml
 AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 AutoStockCar/nbactions.xml
+AutoStockCar/nb-configuration.xml
+AutoStockCar/nbactions.xml
+AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
