Adição de máscara nos campos de CPF/CNPJ

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,2 @@
-
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-<<<<<<< Updated upstream
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 AutoStockCar/nbactions.xml
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-=======
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
->>>>>>> Stashed changes
-/AutoStockCar/target/
-AutoStockCar/nbactions.xml
-AutoStockCar/nbactions.xml
-AutoStockCar/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-AutoStockCar/nbactions.xml
+AutoStockCar/target
