--- a/AutoStockCar/pom.xml
+++ b/AutoStockCar/pom.xml
@@ -118,5 +118,12 @@
             <version>3.7.4</version>
             <type>jar</type>
         </dependency>
+        
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version> 
+        </dependency>
+
     </dependencies>    
 </project>
